<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/headerLogin"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/g" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textIcons"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/headerLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/textPrimary"/>
            <EditText
                android:id="@+id/etLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="text"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/textPrimary"/>
            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/textIcons"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                android:gravity="center"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>
</ScrollView>