<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AboutFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="@color/textPrimary"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/aboutHeader" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Para materias CON laboratorio:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/withLab" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="({nota_evaluacion} x {porcentaje_evaluacion}) x 0.4"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/withLabTheory" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="({nota_evaluacion} x {porcentaje_evaluacion}) x 0.6"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Para materias SIN laboratorio:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/withoutLab" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="{nota_evaluacion} x {porcentaje_evaluacion}"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Para el promedio general de cada materia:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/aboutProm" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="{nota_periodo} x {valor_periodo}"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>