<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SubjectDetailFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/courseDetail"
        android:textColor="@color/textPrimary"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <android.support.v7.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/approvePercentage"
                android:textColor="@color/textPrimary"
                android:layout_gravity="center"
                android:gravity="center" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/approved" />

                    <TextView
                        android:id="@+id/subjectDetailAproved"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="50%"
                        android:textColor="@color/green" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/reprobate" />

                    <TextView
                        android:id="@+id/subjectDetailReprobate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="50%"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Impartido por:"
                android:textColor="@color/textPrimary"
                android:layout_weight="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fulano de tal"
                android:textColor="@color/colorAccent"
                android:layout_weight="1" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>